Some layout fixes + home page done

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -9,10 +9,10 @@ export interface Props {
 const { pageTitle, pageDesc } = Astro.props;
 ---
 
-<Breadcrumbs />
+<!-- <Breadcrumbs /> -->
 <main id="main-content">
-  <h1>{pageTitle}</h1>
-  <p>{pageDesc}</p>
+  <!-- <h1>{pageTitle}</h1> -->
+  <!-- <p>{pageDesc}</p> -->
   <slot />
 </main>
 
