--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -38,18 +38,18 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   canonicalURL={canonicalURL}
 >
   <Header />
-  <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
-    <button
-      class="focus-outline mb-2 mt-8 flex hover:opacity-75"
-      onclick="history.back()"
-    >
-      <svg xmlns="http://www.w3.org/2000/svg"
-        ><path
-          d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
-        ></path>
-      </svg><span>Go back</span>
-    </button>
-  </div>
+  <!-- <div class="mx-auto flex w-full max-w-3xl justify-start px-2"> -->
+  <!--   <button -->
+  <!--     class="focus-outline mb-2 mt-8 flex hover:opacity-75" -->
+  <!--     onclick="history.back()" -->
+  <!--   > -->
+  <!--     <svg xmlns="http://www.w3.org/2000/svg" -->
+  <!--       ><path -->
+  <!--         d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z" -->
+  <!--       ></path> -->
+  <!--     </svg><span>Go back</span> -->
+  <!--   </button> -->
+  <!-- </div> -->
   <main id="main-content">
     <h1 class="post-title">{title}</h1>
     <!-- <ReadDatetime datetime={pubDatetime} readingTime={readingTime} size="lg" className="my-w" /> -->
@@ -79,5 +79,9 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   }
   .tags-container {
     @apply my-8;
+  }
+
+  #main-content {
+    @apply mx-auto mb-1 mt-8 w-full max-w-3xl px-4;
   }
 </style>
