--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -22,12 +22,12 @@ const next = pageNum < totalPages ? "" : "disabled";
 ---
 
 <Layout title={`Posts | ${SITE.title}`}>
-  <Header activeNav="posts" />
+  <Header activeNav="blog" />
   <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
     <ul>
       {
         posts.map(({ data }) => (
-          <Card href={`/posts/${slugify(data)}`} frontmatter={data} />
+          <Card href={`/blog/${slugify(data)}`} frontmatter={data} />
         ))
       }
     </ul>
